Fix display of idp row on mobile

--- a/theme/base/stylesheets/pages/consent.scss
+++ b/theme/base/stylesheets/pages/consent.scss
@@ -179,6 +179,10 @@
                 padding: calculateRem(10px) 0;
                 text-align: left;
 
+                @include screen('mobile') {
+                    @include grid-template-columns(10% 6% 83% 1%);
+                }
+
                 > img {
                     @include grid-position(1, 2, 1, 2);
                     max-height: calculateRem(30px);
@@ -204,10 +208,19 @@
                 > input[type="checkbox"],
                 > .ie11__label {
                     @include grid-position(1, 2, 5, 6);
+
+                    @include screen('mobile') {
+                        @include grid-position(2, 3, 3, 5);
+                    }
                 }
 
                 > .ie11__label {
                     text-align: right;
+
+                    @include screen('mobile') {
+                        margin: 0 0 0 10px;
+                        text-align: inherit;
+                    }
 
                     &:focus-within {
                         outline: 3px dotted $darkishBlue;
@@ -225,9 +238,9 @@
                             display: block;
 
                             > span {
+                                background-position: right 18px center;
                                 padding-right: 40px;
                             }
-                            background-position: right 18px center;
                         }
                     }
                 }
@@ -238,6 +251,7 @@
                     max-width: calc(100% - 4rem);
 
                     @include screen('mobile') {
+                        @include grid-position(3, 4, 1, 5);
                         margin: 9px .5rem;
                         max-width: calc(100% - 1rem);
                     }
@@ -248,7 +262,6 @@
                     justify-content: center;
                     margin: 9px auto 1rem;
                 }
-
             }
 
             _:-ms-fullscreen, > li.idpRow {
